// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tree /> Tree - default 1`] = `
<div
  className="tree"
>
  <ul>
    <li>
      <span>
        <strong>
          config
        </strong>
        : 
        337955292
      </span>
    </li>
    <li>
      <span>
        <strong>
          component
        </strong>
        : 
        keboola.ex-db-mysql
      </span>
    </li>
    <li>
      <span>
        <strong>
          mode
        </strong>
        : 
        run
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Tree /> Tree - with password 1`] = `
<div
  className="tree"
>
  <ul>
    <li>
      <span>
        <strong>
          config
        </strong>
        : 
        337955292
      </span>
    </li>
    <li>
      <span>
        <strong>
          component
        </strong>
        : 
        keboola.ex-db-mysql
      </span>
    </li>
    <li>
      <span>
        <strong>
          mode
        </strong>
        : 
        run
      </span>
    </li>
    <li>
      <span>
        <strong>
          password
        </strong>
        : 
        <span
          title="Protected content, click to reveal"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-lock fa-fw icon-clickable"
            data-icon="lock"
            data-prefix="fas"
            focusable="false"
            onClick={[Function]}
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M80 192V144C80 64.47 144.5 0 224 0C303.5 0 368 64.47 368 144V192H384C419.3 192 448 220.7 448 256V448C448 483.3 419.3 512 384 512H64C28.65 512 0 483.3 0 448V256C0 220.7 28.65 192 64 192H80zM144 192H304V144C304 99.82 268.2 64 224 64C179.8 64 144 99.82 144 144V192z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </span>
    </li>
  </ul>
</div>
`;
